# rust_rapi_chat

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml.example
archive/controllers/: chat_v1.rs  chat_v2.rs  chat_v4.rs  chat_v5.rs
archive/server/: run_v1.rs
archive/utils/: qdrant_v3.rs  qdrant_v4.rs
me/: deploy.txt  fly_io.txt  qdrant.txt
src/: main.rs
src/app/: error.rs  mod.rs  state.rs
src/controllers/: chat.rs  chat_v2.rs  chat_v3.rs  chat_v4.rs  chat_v5.rs  mod.rs
src/controllers/tests/: file_upload.rs
src/routers/: chat.rs  mod.rs
src/server/: mod.rs
src/tests/controllers/: mod.rs
src/utils/: embedding.rs  image.rs  log.rs  mod.rs  qdrant.rs  qdrant_v4.rs  qdrant_v5.rs  summarizer.rs
