[package]
name = "rust_rapi_chat"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
thiserror = "2.0.12"
axum = "0.8.4"
tower-http = { version = "0.6.4", features = ["cors"] }
bytes = "1"
base64 = "0.22"
infer = "0.19"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls"]

[dependencies.axum-extra]
version = "0.10"
features = ["multipart"]

[dependencies.uuid]
version = "1.17.0"
features = ["v4"]

