[package]
name = "rust_rapi_chat"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1"
dotenv = "0.15"
thiserror = "2.0.12"
axum = "0.8.4"
bytes = "1"
base64 = "0.22"
infer = "0.19"
once_cell = "1"
dashmap = "6.1.0"
qdrant-client = "1.8.0"

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls"]

[dependencies.axum-extra]
version = "0.10"
features = ["multipart"]

[dependencies.uuid]
version = "1.17.0"
features = ["v4"]

[dependencies.tower-http]
version = "0.6.4"
features = ["cors"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

